// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jxtDLa FormField__FormFieldContentBox-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 hxbzlD"
          disabled=""
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 ijjTaS"
          placeholder="Please write a story"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <span
        class="StyledText-sc-1sadyjn-0 hosPKv"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 ijjTaS"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="some-text"
      >
        A helpful area of text
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 ijjTaS"
          id="some-text"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iBOdjp FormField__FormFieldContentBox-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 ijjTaS"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bPwDLh"
      >
        There is something very wrong!
      </span>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 ijjTaS"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kTuWTg"
      >
        Some useful information
      </span>
    </div>
  </div>
</div>
`;
